finalized the eda

--- a/notebooks/SpaceX-EDA-DataViz.ipynb
+++ b/notebooks/SpaceX-EDA-DataViz.ipynb
@@ -1233,12 +1233,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# HINT: use astype function\n",
-    "features_one_hot.astype()"
+    "features_one_hot = features_one_hot.astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FlightNumber    float64\n",
+       "PayloadMass     float64\n",
+       "Flights         float64\n",
+       "GridFins        float64\n",
+       "Reused          float64\n",
+       "                 ...   \n",
+       "Serial_B1056    float64\n",
+       "Serial_B1058    float64\n",
+       "Serial_B1059    float64\n",
+       "Serial_B1060    float64\n",
+       "Serial_B1062    float64\n",
+       "Length: 80, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_one_hot.dtypes"
    ]
   },
   {
@@ -1253,6 +1284,15 @@
    "metadata": {},
    "source": [
     "<code>features_one_hot.to_csv('dataset_part_3.csv', index=False)</code>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_one_hot.to_csv('../data/dataset_part_3.csv', index=False)"
    ]
   },
   {
