--- a/notebooks/SpaceX-Machine-Learning-Prediction.ipynb
+++ b/notebooks/SpaceX-Machine-Learning-Prediction.ipynb
@@ -1417,13 +1417,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examining the confusion matrix, we see that logistic regression can distinguish between the different classes.  We see that the problem is false positives.\n",
+    "##### Examining the confusion matrix, we see that logistic regression can distinguish between the different classes.  We see that the problem is false positives.\n",
     "\n",
     "Overview:\n",
     "\n",
     "True Postive - 12 (True label is landed, Predicted label is also landed)\n",
     "\n",
-    "False Postive - 3 (True label is not landed, Predicted label is landed)\n"
+    "False Postive - 5 (True label is not landed, Predicted label is landed)\n"
    ]
   },
   {
